tests/baselines/reference/asyncDeclare_es6.errors.txt
asyncDeclare_es6.ts(1,9): error TS1040: 'async' modifier cannot be used in an ambient context.


==== asyncDeclare_es6.ts (1 errors) ====
    declare async function foo(): Promise<void>;
            ~~~~~
!!! error TS1040: 'async' modifier cannot be used in an ambient context.